# low_cost_robot

./: .gitignore  LICENSE  LINKS_EU.md  README.md  arm_follower.cxprj  dynamixel.py  evaluate.py  record_episodes.py  replay_episode.ipynb  requirements.txt  robot.py  simulation.py  teleoperate_real_robot.py  teleoperate_simulated_robot.py  teleoperate_simulated_robot_vr.py  teleoperation.py  train.py  vr_controller.py  vr_controller_viz.py
config/: config.py
hardware/: README.md  bimanual_teleop.py
hardware/extras/step/: follower_base_with_an_openrb-150_mount.step  (+1 more)
hardware/extras/stl/: README.md  (+2 more)
hardware/follower/: follower_arm.f3z  gripper.step  gripper_static_part.step
hardware/leader/: base.step  gripper_handle.step  gripper_trigger.step  leader_arm.f3z  leader_arm.step  shoulder_to_wrist.step
ros2_ws/: README.md
ros2_ws/src/low_cost_robot_description/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/low_cost_robot_description/config/: display.rviz
ros2_ws/src/low_cost_robot_description/launch/: display.launch.py  gazebo.launch.py
ros2_ws/src/low_cost_robot_description/meshes/: base_link.stl  gripper_moving_1.stl  gripper_static_1.stl  link1_1.stl  link2_1.stl  link3_1.stl  link4_1.stl
ros2_ws/src/low_cost_robot_description/test/: test_copyright.py
ros2_ws/src/low_cost_robot_description/urdf/: low_cost_robot.gazebo  low_cost_robot.trans  low_cost_robot.urdf  low_cost_robot.xacro  materials.xacro
simulation/: interface.py
simulation/low_cost_robot/: low-cost-arm.urdf  low_cost_robot.xml  scene.xml
training/: policy.py  utils.py
(+51 files in other folders)
